[workspace]
members = [
    "sprs-rssn",
    "sprs-ldl-rssn",
    "suitesparse_bindings/suitesparse_ldl_sys-rssn",
    "suitesparse_bindings/sprs_suitesparse_ldl-rssn",
    "suitesparse_bindings/suitesparse_camd_sys-rssn",
    "suitesparse_bindings/sprs_suitesparse_camd-rssn",
    "suitesparse_bindings/suitesparse-src-rssn",
    "suitesparse_bindings/suitesparse_umfpack_sys-rssn",
    "suitesparse_bindings/sprs_suitesparse_umfpack-rssn",
    "sprs-rand-rssn",
    "sprs-benches-rssn",
    "sprs-tests-rssn",
]
resolver = "2"

[workspace.package]
rust-version = "1.64"
edition = "2021"
license = "MIT OR Apache-2.0"
