[package]
name = "sprs-ldl-rssn"
description = "Sparse cholesky factorization"
version = "0.10.0"
authors = ["Vincent Barrielle"]
readme = "README.md"
license = "LGPL-2.1"
repository = "https://github.com/sparsemat/sprs"
documentation = "https://vbarrielle.github.io/sprs/doc/sprs/"
keywords = ["sparse", "matrix", "cholesky", "factorization", "linalg"]
rust-version.workspace = true
edition.workspace = true

[dependencies]
num-traits = "0.2.0"
sprs-rssn = { version = "0.11.0", path = "../sprs-rssn" }
sprs_suitesparse_ldl-rssn = { version = "0.8.0", path = "../suitesparse_bindings/sprs_suitesparse_ldl-rssn", optional = true }
sprs_suitesparse_camd-rssn = { version = "0.3.0", path = "../suitesparse_bindings/sprs_suitesparse_camd-rssn", optional = true }

[dev-dependencies]
ndarray = ">=0.15.0, <0.18"
