[package]
name = "sprs-rand-rssn"
description = "Random sparse matrix generation"
version = "0.5.0"
authors = ["Vincent Barrielle <vincent.barrielle@m4x.org>"]
documentation = "https://docs.rs/sprs-rand"
rust-version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
rand = "0.10.0"
rand_distr = "0.6.0"
rand_pcg = "0.10.0"
sprs = { version = "0.11.0", path = "../sprs-rssn" }
