[package]
name = "sprs-tests-rssn"
version = "0.1.0"
authors = ["Magnus Ulimoen <magnus@ulimoen.dev>"]
publish = false
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dev-dependencies]
sprs-rssn = { path = "../sprs-rssn", features = ["serde"], default-features = false }
serde_json = "1.0.58"
