[package]
name = "suitesparse_camd_sys-rssn"
version = "0.1.1"
authors = ["Vincent Barrielle <vincent.barrielle@m4x.org>"]
description = "Raw bindings to SuiteSparse's CAMD algorithm"
build = "build.rs"
links = "camd"
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[features]
static = ["dep:suitesparse-src-rssn", "suitesparse-src-rssn?/camd"]

[dependencies]
suitesparse-src-rssn = { version = "0.1.0", path = "../suitesparse-src-rssn", optional = true }
